<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme.Toolbar"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:orientation="vertical"
            android:paddingLeft="@dimen/detail_padding_left"
            android:paddingRight="@dimen/md_keylines"
            android:paddingTop="@dimen/md_keylines">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_keylines"
                android:text="@string/description_label"
                android:textColor="?attr/colorAccent"
                android:textSize="@dimen/article_titles" />

            <WebView
                android:id="@+id/place_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/detail_desc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_keylines"
                android:layout_marginTop="@dimen/md_keylines"
                android:text="@string/script_label"
                android:textColor="?attr/colorAccent"
                android:textSize="@dimen/article_titles" />

            <TextView
                android:id="@+id/script_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/script" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_keylines"
                android:layout_marginTop="@dimen/md_keylines"
                android:text="@string/devices"
                android:textColor="?attr/colorAccent"
                android:textSize="@dimen/article_titles" />

            <TextView
                android:id="@+id/device_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/script" />


            <TextView
                android:id="@+id/device_freespace"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                tools:text="" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="@dimen/md_keylines"
        android:layout_marginRight="@dimen/md_keylines"
        android:tint="@color/white"
        app:srcCompat="@drawable/ic_add" />


</android.support.design.widget.CoordinatorLayout>
